--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-scroll-area": "^1.0.5",
+		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@tanstack/react-query": "^5.25.0",
 		"axios": "^1.6.7",
@@ -32,10 +33,13 @@
 		"lucide-react": "^0.344.0",
 		"next": "^14.1.2",
 		"next-themes": "^0.2.1",
+		"qrcode-pix": "^5.0.0",
 		"react": "^18.2.0",
 		"react-day-picker": "^8.10.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.0",
+		"react-qr-code": "^2.0.12",
+		"sharp": "^0.33.2",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.22.4",
